--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -197,8 +197,8 @@
 
                		<div class="checkbox">
 						<label>
-              <input type="checkbox" [(ngModel)]="aceptaInstalacion1value"> Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
-                <div *ngIf="finstalacion1.submitted && !aceptaInstalacion1Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
+              <input type="checkbox" name="aceptaInstalacion1" [(ngModel)]="aceptaInstalacion1value"> Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
+                <div *ngIf="aceptaInstalacion1Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
 						</label>
 					  </div>
 
@@ -233,14 +233,14 @@
 
                   <div class="form-group" [ngClass]="{ 'has-error': finstalacion2.submitted && !rutInstalacion2.valid }">
                     <label for="perfil">R.U.T</label>
-                    <input type="text" class="form-control" [(ngModel)]="rutInstalacion2value"  #rutInstalacion2="ngModel" name="rutInstalacion2" required>
+                    <input type="text" class="form-control" [(ngModel)]="rutInstalacion2value"  #rutInstalacion2="ngModel" name="rutInstalacionDos" required>
                      <div *ngIf="finstalacion2.submitted && !rutInstalacion2.valid" class="help-block">Debe ingresar un rut</div>
                   </div>
 
                		<div class="checkbox">
 						<label>
-              <input type="checkbox"  [(ngModel)]="aceptaInstalacion2value" > Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
-                 <div *ngIf="finstalacion2.submitted && !aceptaInstalacion2Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
+              <input type="checkbox" name="aceptaInstalacion2" [(ngModel)]="aceptaInstalacion2value" > Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
+                 <div *ngIf="aceptaInstalacion2Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
 						</label>
 					  </div>
 
@@ -286,8 +286,8 @@
 
                		<div class="checkbox">
 						<label>
-              <input type="checkbox" [(ngModel)]="aceptaInstalacion3value"> Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
-                 <div *ngIf="finstalacion3.submitted && !aceptaInstalacion3Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
+              <input type="checkbox" name="aceptainstalacion3" [(ngModel)]="aceptaInstalacion3value"> Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
+                 <div *ngIf="aceptaInstalacion3Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
 						</label>
 					  </div>
 
@@ -310,8 +310,8 @@
                     </div>
                     <div class="checkbox">
                         <label>
-                          <input type="checkbox" [(ngModel)]="aceptaInstalacion4value"> Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
-                           <div *ngIf="finstalacion4.submitted && !aceptaInstalacion4Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
+                          <input type="checkbox" name="aceptainstalacion4" [(ngModel)]="aceptaInstalacion4value"> Acepto <a routerLink="/terminos" style="color:#6b8bc0;">Términos y Condiciones</a>
+                           <div *ngIf="aceptaInstalacion4Valido" class="help-block">Debe aceptar los terminos y condiciones</div>
                         </label>
                     </div>
                                       <button type="submit" class="btn btn-default">GUARDAR DATOS</button>
@@ -331,7 +331,7 @@
       </div><!-- col-md-12-->
 		  </div>
 
-<div *ngIf="estado" [ngClass] = "'success'"> Tus datos fueron guardados temporalmnente, sigue al siguiente paso, para fanalizar tu compra. </div>
+<div *ngIf="estado" [ngClass] = "'success'"> Tus datos fueron guardados temporalmente, sigue al siguiente paso, para fanalizar tu compra. </div>
 <div *ngIf="errorMessage" [ngClass] = "'error'"> {{errorMessage}} </div>
 
 
