--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -121,7 +121,7 @@
                   <table class="table">
                       <tr>
                         <td><a href="index.html">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
-                        <td><a routerLink="/misdatos">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
+                        <td><a routerLink="/misdatos">  <button class="btn btn-default"><span>Ir a mis datos</span></button></a></td>
                       </tr>
                   </table>
 
