--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -125,9 +125,9 @@
                               <div *ngIf="f.submitted && !emailcliente.valid" class="help-block">Email es requerido</div>
                             </div>
 
-                            <div class="form-group">
+                            <!--div class="form-group">
                                <label for="exampleInputEmail1">Cantidad de neumáticos</label>
-                                <input type="number" class="form-control" id="number" placeholder="0"> </div>
+                                <input type="number" class="form-control" id="number" placeholder="0"> </div-->
                           
                           <button type="submit" class="btn btn-default bremsen">Enviar</button>
                           </form>
