--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -120,8 +120,8 @@
 
                   <table class="table">
                       <tr>
-                        <td><a href="index.html">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
-                        <td><a routerLink="/misdatos">  <button class="btn btn-default"><span>Ir a mis datos</span></button></a></td>
+                        <td><a href="/categoria">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
+                        <td><a href="javascript:void(0)" (click)="iramisdatos()">  <button class="btn btn-default"><span>Ir a mis datos</span></button></a></td>
                       </tr>
                   </table>
 
