--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -235,7 +235,7 @@
                         -->
 
                     </div>
-                    <h4><a routerLink="/producto/{{producto.ID}}"> {{producto.MARCA}} {{producto.MODELO}} </a></h4>
+                    <h4><a routerLink="/producto/{{producto.ID}}"> {{producto.MARCA}} {{producto.MODELO_RUEDA}} </a></h4>
                     <div>
                       <ul class="lista-producto">
                           <li>Ancho: {{producto.ANCHO}}</li>
