--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -171,7 +171,7 @@
                   <div class="caption">
                     
                   
-                    <h4><a routerLink="/producto/{{producto.ID}}"> {{producto.MARCA}} {{producto.MODELO}} </a></h4>
+                    <h4><a routerLink="/producto/{{producto.ID}}"> {{producto.MARCA}} {{producto.MODELO_RUEDA}} </a></h4>
                     <div>
                       <ul class="lista-producto">
                           <li>Ancho: {{producto.ANCHO}}</li>
