--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -131,7 +131,7 @@ slideSpeed : 300, paginationSpeed : 400, singleItem : true}" [items]="productos"
       <div class="product-thumb" *ngFor="let producto of productos">
       <div class="image" style="line-height: 40px;"><a routerLink="/producto/{{producto.ID}}"><img src="assets/galerias/{{producto.JPG}}" class="img-responsive responsivo" /></a></div>
       <div class="caption">
-          <h4><a routerLink="/producto/{{producto.ID}}">{{producto.MARCA}} {{producto.MODELO}}</a></h4>
+          <h4><a routerLink="/producto/{{producto.ID}}">{{producto.MARCA}} {{producto.MODELO_RUEDA}}</a></h4>
           <h6>{{producto.MEDIDA}}</h6>
           <p class="price">{{producto.PRECIO_FINAL | number | currencyFormat}} </p>
       </div>
@@ -163,19 +163,19 @@ slideSpeed : 300, paginationSpeed : 400, singleItem : true}" [items]="productos"
         <div class="col-md-8">
           <div class="row">
             <div class="col-md-6 pad-upDown">
-               <img class="img-responsive center-block " src="assets/image/BANNERS_at-home.jpg">
+               <a routerLink="/search/home/camioneta"><img class="img-responsive center-block " src="assets/image/BANNERS_at-home.jpg"></a>
             </div>
             <div class="col-md-6">
-                 <img class="img-responsive center-block " src="assets/image/BANNERS_ht-home.jpg">
+              <a routerLink="/search/home/automovil"> <img class="img-responsive center-block " src="assets/image/BANNERS_ht-home.jpg"></a>
             </div>
            </div>
            <br>
            <div class="row">
             <div class="col-md-6">
-               <img class="img-responsive center-block " src="assets/image/BANNERS_mt-home.jpg">
+               <a  routerLink="/search/home/camioneta"><img class="img-responsive center-block " src="assets/image/BANNERS_mt-home.jpg"></a>
             </div>
             <div class="col-md-6 pad-upDown">
-                 <img class="img-responsive center-block " src="assets/image/BANNERS_oferta-runflat.jpg">
+              <a  routerLink="/search/home/runflat"> <img class="img-responsive center-block " src="assets/image/BANNERS_oferta-runflat.jpg"></a>
             </div>
           </div>
         </div>
