--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -28,7 +28,7 @@
 
                 <div class="col-md-6">
                   <div class="caption">
-                    <h4> {{producto.MARCA}} {{producto.MODELO}}</h4>
+                    <h4> {{producto.MARCA}} {{producto.MODELO_RUEDA}}</h4>
                     <div>
                       <ul class="lista-producto">
                           <li>Ancho: {{producto.ANCHO}}</li>
