--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -120,7 +120,7 @@
 
                   <table class="table">
                       <tr>
-                        <td><a href="/categoria">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
+                        <td><a routerLink="/categoria">  <button class="btn btn-default"><span>Ir a comprar</span></button></a></td>
                         <td><a href="javascript:void(0)" (click)="iramisdatos()">  <button class="btn btn-default"><span>Ir a mis datos</span></button></a></td>
                       </tr>
                   </table>
