--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -90,7 +90,7 @@
         <div class="" style="padding-top: 28px;">
 
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" style="width: 50%" class="active text-center"><a href="#comprarAro" aria-controls="comprarAro" role="tab" data-toggle="tab"><b style="font-size: 17.8px; text-transform: uppercase; ">Comprar por Aro</b></a></li>
+              <li role="presentation" style="width: 50%" class="active text-center"><a href="#comprarAro" aria-controls="comprarAro" role="tab" data-toggle="tab"><b style="font-size: 17.8px; text-transform: uppercase; ">Comprar por Auto</b></a></li>
               <li role="presentation" style="width: 50%" class="text-center"><a href="#comprarMedida" aria-controls="comprarMedida" role="tab" data-toggle="tab"><b style="font-size: 17.8px; text-transform: uppercase; ">Comprar por medida</b></a></li>
             </ul>
 
